# Hot-Graphics-Engine

./: .gitignore  CMakeLists.txt  naming_conventions.md  readme.md  renderdoc_settings.cap  test.csv
assets/models/: booksetB.mtl  d1_drawer1.mtl  garage_window.mtl  granny.mtl  spider.mtl  table.mtl  untitled.mtl
assets/ps1_phasmophobia/: scene.gltf
assets/shaders/: all_light.frag  all_light.geom  all_light.vert  always-front.vert  bullet_d.frag  bullet_d.vert  checkerboard.frag  color-mixer.frag  color.frag  crosshair.frag  danger.frag  fog.frag  highlight-menu.frag  highlight-menu.vert  house_exterior.frag  picking.frag  textured.frag  textured3d.frag  textured3d.vert  tinted.frag
assets/shaders/lighting/: all_light.frag  all_light.geom  basic_pbr_light.frag  pbr.frag
assets/shaders/others/: texture-test.frag  triangle.vert
assets/shaders/postprocess/: chromatic-aberration.frag  film-grain.frag  vignette.frag
assets/shaders/room_one/: house_exterior.frag
assets/shaders/text/: text.frag  text.vert
assets/textures/Flashlight_2/: test.ipynb
assets/textures/GarageWindows/: test.ipynb
assets/textures_uncomp/Hands/: test.ipynb
config/: app.jsonc  ground.jsonc  inventory.jsonc  light.jsonc  locked-away.jsonc  physics.jsonc  picking.jsonc  simple.jsonc
source/: main.cpp  miniaudio_wrapper.cpp  miniaudio_wrapper.hpp
source/common/: application.cpp  application.hpp  asset-loader.cpp  imgui-utils.hpp
source/common/components/: camera-controller.cpp  camera-controller.hpp  camera.cpp  camera.hpp  component-deserializer.hpp  fps-camera-controller.hpp  free-camera-controller.hpp  ground-or-stairs.hpp  knob-component.cpp  knob-component.hpp  light-component.cpp  light-component.hpp  light.hpp  mesh-renderer.hpp  pickable.cpp  pickable.hpp  player.hpp  rigid-body.cpp  rigid-body.hpp  trigger.cpp  trigger.hpp
source/common/ecs/: entity.cpp  entity.hpp  transform.cpp  world.cpp  world.hpp
source/common/light/: light-utils.hpp
source/common/material/: material.cpp  material.hpp  pipeline-state.hpp
source/common/mesh/: mesh-utils.cpp  mesh-utils.hpp  mesh.cpp  mesh.hpp
source/common/physics/: physics-utils.hpp
source/common/shader/: shader.cpp  shader.hpp
source/common/systems/: audio.hpp  camera-controller.hpp  clock-controller.hpp  drawer-opener.cpp  drawer-opener.hpp  forward-renderer.cpp  forward-renderer.hpp  fps-camera-controller.hpp  free-camera-controller.hpp  light.hpp  locked-away.cpp  locked-away.hpp  physics.cpp  physics.hpp  picking.cpp  picking.hpp  text-renderer.cpp  text-renderer.hpp
source/common/texture/: pickingTexture.hpp  screenshot.cpp  texture-utils.cpp  texture-utils.hpp  texture2d.hpp  texture3d.hpp
source/states/: entity-test-state.hpp  lose-state.hpp  menu-state.hpp  play-state.hpp  win-state.hpp
